tdf#146547 Mark read-only docs as modified

when an editable section is changed.

Change-Id: I588b09f160974d3a3833bfa011fd07f2ee496616
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151535
Tested-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>